# SPDX-FileCopyrightText: 2025 Oliver Beard <olib141@outlook.com>
# SPDX-License-Identifier: LGPL-2.0-or-later

install(FILES admin1Codes.txt DESTINATION ${KDE_INSTALL_DATADIR}/koko)
install(FILES admin2Codes.txt DESTINATION ${KDE_INSTALL_DATADIR}/koko)
install(FILES cities1000.txt DESTINATION ${KDE_INSTALL_DATADIR}/koko)
install(FILES countries.csv DESTINATION ${KDE_INSTALL_DATADIR}/koko)
